--- a/markup/assets/scss/all.scss
+++ b/markup/assets/scss/all.scss
@@ -1,7 +1,26 @@
-@import 'modules/variables';
-@import 'modules/grid';
-@import 'modules/mixins';
- body{
- 	background: green;
- 	font-size: 15px;
- }
+@import 'elements/variables';
+@import 'elements/grid';
+@import 'elements/mixins';
+@import 'elements/reset';
+@import 'elements/type';
+
+@import 'elements/icons/style';
+@import 'elements/icons/variables';
+
+@import 'elements/blocks';
+@import 'elements/lists';
+@import 'elements/navigation';
+@import 'elements/help-classes';
+@import 'elements/blockquote';
+@import 'elements/select';
+
+.pp{
+	position: absolute;
+	top: -697px;
+	opacity: 0.5;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	        transform: translateX(-50%);
+	pointer-events: none;
+	z-index: 999;
+}
