--- a/markup/assets/scss/modules/_variables.scss
+++ b/markup/assets/scss/modules/_variables.scss
@@ -57,7 +57,7 @@ $btn-dark-bg-hover:             darken($btn-dark-bg, 10%);
 $icon-font-size-base:			15px;
 $icon-font-size-md:				24px;
 $icon-font-size-lg:				48px;
-
+$icon-font-size-mlg:				20px;
 
 // Forms
 $input-bg:                       transparent;
