--- a/markup/assets/scss/all.scss
+++ b/markup/assets/scss/all.scss
@@ -1,19 +1,20 @@
-@import 'elements/variables';
-@import 'elements/grid';
-@import 'elements/mixins';
-@import 'elements/reset';
-@import 'elements/type';
+@import 'modules/variables';
+@import 'modules/grid';
+@import 'modules/mixins';
+@import 'modules/reset';
+@import 'modules/type';
 
-@import 'elements/icons/style';
-@import 'elements/icons/variables';
+@import 'modules/icons/style';
+@import 'modules/icons/variables';
 
-@import 'elements/blocks';
-@import 'elements/lists';
-@import 'elements/navigation';
-@import 'elements/help-classes';
-@import 'elements/blockquote';
-@import 'elements/select';
-
+@import 'modules/blocks';
+@import 'modules/lists';
+@import 'modules/navigation';
+@import 'modules/help-classes';
+@import 'modules/blockquote';
+// @import 'modules/select';
+@import 'modules/buttons';
+@import 'modules/lebels';
 .pp{
 	position: absolute;
 	top: -697px;
