--- a/markup/assets/scss/modules/_grid.scss
+++ b/markup/assets/scss/modules/_grid.scss
@@ -16,7 +16,7 @@ $enable-transitions:        true !default;
 $enable-hover-media-query:  true !default;
 
 
-$developer-mode:            true !default;
+$developer-mode:            false !default;
 
 @if  $developer-mode {
   [class*="col-"] {
@@ -33,9 +33,9 @@ $developer-mode:            true !default;
 $grid-breakpoints: (
   xs: 0,
   sm: 480px,
-  md: 720px,
+  md: 768px,
   lg: 960px,
-  xl: 1140px
+  xl: 1320px
 ) !default;
 
 // Number of columns in the grid.
@@ -50,10 +50,10 @@ $grid-gutter-width:          30px !default;
 // Define the maximum width of `.container` for different screen sizes.
 
 $container-max-widths: (
-  sm: 480px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px
+  sm: 768px,
+  md: 960px,
+  lg: 1240px,
+  xl: 1320px
 ) !default;
 
 
