add custom select

--- a/markup/assets/scss/all.scss
+++ b/markup/assets/scss/all.scss
@@ -12,7 +12,7 @@
 @import 'modules/navigation';
 @import 'modules/help-classes';
 @import 'modules/blockquote';
-// @import 'modules/select';
+@import 'modules/select';
 @import 'modules/buttons';
 @import 'modules/lebels';
 .pp{
