--- a/markup/assets/scss/modules/_lists.scss
+++ b/markup/assets/scss/modules/_lists.scss
@@ -86,10 +86,10 @@
 					color: $brand-color;
 				}
 				&:hover{
-					border-color: darken($brand-color, 15%);
 					text-decoration: none;
+					background: $brand-color;
 					[class*="icon-"]{
-						color: darken($brand-color, 15%);
+						color: $text-color;
 					}
 				}
 			}
