change UI_VP and variables

--- a/markup/assets/scss/all.scss
+++ b/markup/assets/scss/all.scss
@@ -15,6 +15,11 @@
 @import 'modules/select';
 @import 'modules/buttons';
 @import 'modules/lebels';
+@import 'modules/brand';
+@import 'modules/form';
+@import 'modules/scrolltop';
+@import 'modules/slider';
+@import 'modules/tumbnail';
 .pp{
 	position: absolute;
 	top: -697px;
