--- a/markup/assets/scss/modules/_help-classes.scss
+++ b/markup/assets/scss/modules/_help-classes.scss
@@ -34,6 +34,9 @@
 		padding: 0 20px;
 		position: relative;
 		@media screen and (min-width: 768px){
+			padding: 0 80px;
+		}
+		@media screen and (min-width: 1420px){
 			padding: 0 90px;
 		}
 		[class*='icon-']{
