--- a/markup/assets/scss/modules/_form.scss
+++ b/markup/assets/scss/modules/_form.scss
@@ -17,16 +17,9 @@
 	}
 	.btn{
 		position: absolute;
-	    bottom: 6%;
-	    transform: translateY(3%);
-	    right: 0.8%;
-	    margin: 0.4%;
-       @media screen and (max-width: 480px){
-        font-size:1vw; 
-         right: 0.2%;
-         top:18%;
-     }
-
+	    bottom: 4px;
+	    top: 4px;
+	    right: 4px;
 	}
 }
 .form-inverse{
