--- a/markup/assets/scss/modules/_select.scss
+++ b/markup/assets/scss/modules/_select.scss
@@ -6,9 +6,11 @@
 	font-size: 12px;
 	height: 35px;
 	width: 90px;
-	right: -8px;
 	top: 8px;
-	margin-left: 13px;
+	left: 3px;
+	@media screen and (min-width: 1420px){
+		left: 0;
+	}
 	select{
 		height: auto !important;
 	}
@@ -33,4 +35,8 @@
 }
 .jq-selectbox li{
 	padding: 9px 20px 5px 14px;
+	&:hover{
+		color: $text-inverse-color;
+		background: $text-color;
+	}
 }
