--- a/markup/assets/scss/modules/_slider.scss
+++ b/markup/assets/scss/modules/_slider.scss
@@ -1,3 +1,6 @@
+.container-lg{
+  max-width: 1470px;
+}
 .container-slider{
  position: relative;
  max-width: 100%;	
@@ -10,24 +13,26 @@
 						width: 100%;
 	 				}
 				}
-				.btn{
-			        position: absolute;
-			        left: 50%;
-			        transform: translateX(-50%);
-			        bottom: 11%;
-               @media screen and (max-width: 786px){
-                  transform: translateX(-65%);
-                }
-				}
+        &-caption{
+          position: absolute;
+          top: 20.78%;
+          left: 50%;
+          transform: translateX(-47%);
+          display: flex;
+          flex-direction: column;
+          @media screen and (min-width: 1420px){
+            top: 15.5%;
+          }
+        }	
 			}
 		}
 .slider-arrows{
 	display: flex;
 	justify-content: center ;
 	position: absolute;
-	left: 52%;
-	transform: translateX(-52%);
-	bottom: 5%;
+	left: 50%;
+	bottom: 4%;
+  transform: translateX(-58%);
    .pager{
     .bx-pager-item {
      display: inline-block; 
@@ -35,10 +40,12 @@
      a{
       position: relative;
       display: block;
-      height: 20px;
-      width: 20px;
-	  color: transparent;
-      &:hover{
+      height: 21px;
+      width: 21px;
+	   color: transparent;
+     margin-right: 4px;
+      &:hover,
+      &.active{
        &:before{
         color: $pager-hover-color;
        }
@@ -50,7 +57,7 @@
        top: 0;
        bottom: 0;
        left: 0;
-       font-size: 20px;
+       font-size: 19px;
         color: $pager-color;
        z-index: 20;
       }
