--- a/markup/assets/scss/modules/_lists.scss
+++ b/markup/assets/scss/modules/_lists.scss
@@ -52,7 +52,7 @@
 				text-align: center;
 				&.active{
 					a{
-						color: $brand-color;
+						box-shadow: inset 0 0 2px 1px $brand-color;
 					}
 				}
 				a{
@@ -64,7 +64,7 @@
 					display: block;
 					font-weight: 700;
 					&:hover{
-						color: $brand-color;
+						box-shadow: inset 0 0 2px 1px $brand-color;
 					}
 				}
 			}
