--- a/markup/assets/scss/modules/_slider.scss
+++ b/markup/assets/scss/modules/_slider.scss
@@ -14,12 +14,22 @@
 	 				}
 				}
         &-caption{
+          @media screen and (max-width: 550px){
+            top: 50%;
+            transform: translateY(-50%);
+            transform: translateX(-50%);
+          }
           position: absolute;
-          top: 20.78%;
+          top: 10%;
           left: 50%;
-          transform: translateX(-47%);
+          transform: translateY(0);
+          transform: translateX(-50%); 
           display: flex;
           flex-direction: column;
+          @media screen and (min-width: 960px){
+            top: 20.78%;
+            transform: translateX(-47%);
+          }
           @media screen and (min-width: 1420px){
             top: 15.5%;
           }
@@ -31,8 +41,12 @@
 	justify-content: center ;
 	position: absolute;
 	left: 50%;
-	bottom: 4%;
-  transform: translateX(-58%);
+	bottom: 2%;
+  transform: translateX(-50%);
+  @media screen and (min-width: 1026px){
+    transform: translateX(-58%);
+    bottom: 4%;
+  }
    .pager{
     .bx-pager-item {
      display: inline-block; 
@@ -57,9 +71,12 @@
        top: 0;
        bottom: 0;
        left: 0;
-       font-size: 19px;
-        color: $pager-color;
+       font-size: 15px;
+      color: $pager-color;
        z-index: 20;
+        @media screen and (min-width: 960px){
+          font-size: 19px;
+        }
       }
      }
     }
